# MIDI-Output-Setup-CPL

./: .gitattributes  CMakeLists.txt  LICENSE.rtf  LICENSE.txt  README.md  installer.iss
src/: config_dialog.c  config_dialog.h  midiselect-cpl.c  midiselect-tool.c  midiselect.def  midiselect.manifest  midiselect.rc  res-cpl.rc  res-tool.rc  resource.h
